--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -2,20 +2,34 @@
 body {
   font-family: "Arial", sans-serif;
   background-color: hsl(240, 30%, 95%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
   margin: 0;
 }
-
+.parent-c {
+  height: 100vh;
+  width:100%;
+  overflow-y: auto;
+  justify-content: center;
+  display: flex;
+  background-color: white;
+}
 .register-container {
   background-color: #fff;
-  padding: 30px;
+  padding: 50px; 
+  height: auto;
   width: 350px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 10px;
   text-align: center;
+  justify-content: center;
+  display: flex;
+  flex-direction:column ;
+  align-items: center;
+  align-self: center;
+  padding: 20px;
+  backdrop-filter: blur(9px);
+  background:transparent;
+ 
 }
 
 .register-title {
@@ -120,16 +134,32 @@ body {
 .register-link:hover {
   text-decoration: underline;
 }
+.p-s{
+  height: 100vh;
+  width:100%;
+  justify-content: center;
+  display: flex;
+  background-image: url("/src/assets/workerslist.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  align-items: center;
+}
 .select-container {
-  
   text-align: center;
-  background-color: #fff;
+  background-color: #ffffff;
   padding: 40px;
   width: 350px;
   margin: auto;
   margin-top: 15%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  align-self: center;
+  backdrop-filter: blur(9px);
+  background: transparent;
+  
 }
 
 .select-title {
@@ -403,11 +433,11 @@ body {
   width: 90%;
   background: #ffffff;
   padding: 25px;
-  border-radius: 12px;
+  border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
   text-align: center;
   min-height: 70vh;
-  min-width: 60vh;
+  min-width: 600px;
 }
 
 h2 {
@@ -625,24 +655,15 @@ h2 {
 }
 
 /*worker slots*/
+
 .worker-slots-container {
-  margin:0 auto;
-  margin-top: 400px; 
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  max-width: 700px;
+  height: 100vh;
   width: 100%;
-  background: #ffffff;
-  padding: 30px;
-  border-radius: 12px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
-  text-align: center;
   min-width: 80vh;
-  overflow: auto;
-  min-height: 100vh;
-  padding-top: 300px;
-  align-items: center;
-  flex-direction: column;
-  justify-content: flex-start;
+  max-width: 700px;
+  background: #ffffff;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
   
 }
 
@@ -762,7 +783,7 @@ h2 {
   margin-bottom: 50px;
   margin-top:60px;
   width:100%;
-  max-width:600px;
+  /* max-width:600px; */
   text-align: center;
   align-items: center;
   
@@ -776,7 +797,8 @@ h2 {
   font-size: 14px;
   box-sizing: border-box;
   height:150px;
-  margin-left: 25px;
+  /* margin-left: 25px; */
+  /* padding: 16px; */
   margin-right: 30px;
   
 }
@@ -908,6 +930,8 @@ h2 {
   margin: 0 auto;
   padding: 20px;
   height: 700px;
+  justify-content: center;
+  align-items: center;
   
 }
 
