booking count updated

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -2,8 +2,10 @@
 body {
   font-family: "Arial", sans-serif;
   background-color: hsl(240, 30%, 95%);
-  height: 100vh;
   margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow-y: auto;
 }
 .parent-c {
   height: 100vh;
